# ToonShader

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.zed/: tasks.json
Models/Animals/tiger/: tiger.gltf
Models/Terrain/: terrain.gltf
Models/blender files/: animals_free.blend  animals_free.blend1  island.blend  island.blend1
Shaders/OutlineShader/: fragment.glsl  vertex.glsl
Shaders/ToonShader/: fragment.glsl  vertex.glsl
include/: MainRenderPass.h  OutlineRenderPass.h  ToonObject.h  ToonScene.h
src/: MainRenderPass.cpp  OutlineRenderPass.cpp  ToonObject.cpp  ToonScene.cpp
